--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "web3.storage": "^4.5.4"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.8.0",
